# vairagya

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  config.example.yaml  pyproject.toml  requirements.txt
examples/: advanced.py  basic.py
src/: __main__.py  core.py  health.py  utils.py
src/vairagya/: __init__.py  cli.py  models.py  report.py  simulator.py
src/vairagya/coach/: __init__.py  advisor.py  challenges.py  goals.py
src/vairagya/monitor/: __init__.py  notifications.py  patterns.py  screen_time.py
tests/: test_benchmark.py  test_coach.py  test_core.py  test_integration.py  test_models.py  test_monitor.py  test_simulator.py
